# wasm-emscripten-vs

./: .gitignore
html-emcc/: CMakeLists.txt  CMakeSettings.json  html-emcc.cpp  html-emcc.h  test_html_debug.bat  test_html_release.bat
wasm-cmake/: CMakeLists.txt  CMakeSettings.json  wasm-cmake.cpp  wasm-cmake.h
webpack-emcc/: CMakeLists.txt  CMakeSettings.json  webpack-emcc.cpp  webpack-emcc.h
webpack-project/: package.json  tsconfig.json  webpack.config.js
webpack-project/public/: index.html
webpack-project/src/: app.ts
